--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="phone.css">
+   <link rel="stylesheet" href="tablet.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="header">
+          <div class="menu">
+                <i class="fa-solid fa-bars open" ></i>
+                <i class="fa-solid fa-xmark close"></i>
+            </div>
         <div class="nav">
             <div class="logo">
                 <img src="H-removebg-preview 1.png" alt="">
@@ -118,5 +125,6 @@
         </div>
         
     </div>
+    <script src="app.js"></script>
 </body>
-</html>
+</html>   
